# Football_Analysis_Tool

./: README.md
.github/workflows/: backend.yml  frontend.yml
Documents/: Links  xG pöhinä.pptx
backend/: .dockerignore  .env.example  Dockerfile  crud_operations.py  main.py  pg_test.py  pyproject.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: crud_operations.py  database.py  main.py  manual_test_file.py  models.py
examples/: example_actions_array.json
frontend/: .env.example  .env.production  app.jsx  index.html  main.jsx  package-lock.json  package.json  styles.css  vite.config.js
frontend/__tests__/utils/: stats.test.js
frontend/components/: ActionOptions.jsx  Arrow.jsx  MatchSelector.jsx  MatchUploadForm.jsx  ShotMarker.css  ShotMarker.jsx  StatsTable.jsx
frontend/utils/: expectedGoals.js  matchTransforms.js  stats.js
